--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -43,56 +43,8 @@
           </div>
           <h5 style='padding-top: 10%;'>Mars Facts</h5>
           <div class="table-responsive" style="overflow-x:auto; overflow-y:auto; max-height:500px; max-width: auto;">
-            <table border="2" class="dataframe">
-              <thead>
-                <tr style="text-align: left;">
-                  <th></th>
-                  <th>Values</th>
-                </tr>
-                <tr>
-                  <th>Parameters</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th>Equatorial Diameter:</th>
-                  <td>6,792 km</td>
-                </tr>
-                <tr>
-                  <th>Polar Diameter:</th>
-                  <td>6,752 km</td>
-                </tr>
-                <tr>
-                  <th>Mass:</th>
-                  <td>6.39 x 10^23 kg (0.11 Earths)</td>
-                </tr>
-                <tr>
-                  <th>Moons:</th>
-                  <td>2 (Phobos &amp; Deimos)</td>
-                </tr>
-                <tr>
-                  <th>Orbit Distance:</th>
-                  <td>227,943,824 km (1.38 AU)</td>
-                </tr>
-                <tr>
-                  <th>Orbit Period:</th>
-                  <td>687 days (1.9 years)</td>
-                </tr>
-                <tr>
-                  <th>Surface Temperature:</th>
-                  <td>-87 to -5 C</td>
-                </tr>
-                <tr>
-                  <th>First Record:</th>
-                  <td>2nd millennium BC</td>
-                </tr>
-                <tr>
-                  <th>Recorded By:</th>
-                  <td>Egyptian astronomers</td>
-                </tr>
-              </tbody>
-            </table>
+            <table>{{mars_data.mars_table|safe}}</table>
+            
           </div>
         </div>
       </div>
